# wireup-demo

./: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: run_all.yml
app/: app.py
app/blueprint/: post.py
app/handler/: __init__.py
app/model/: api.py  app.py  db.py
app/service/: database_connection.py  mailer_service.py  post_repository.py  post_service.py
app/util/: api_response.py
blueprint/: post.py
config/: parameters.json  parameters.yaml
demoapp/: app.py  cli.py  config.py
demoapp/blueprint/: post.py
demoapp/blueprints/: post.py
demoapp/commands/: __init__.py  create_database_command.py  create_post_command.py
demoapp/models/: api.py  db.py
demoapp/service/: mailer_service.py  post_repository.py  post_service.py
demoapp/services/: mailer_service.py  post_repository.py  post_service.py
demoapp/util/: api_response.py
handler/: __init__.py
model/: config.py
model/api/: __init__.py
model/database/: __init__.py
service/: __init__.py  database_connection.py  mailer_service.py  post_repository.py  post_service.py
test/: fixtures.py  test_database_connection.py  test_mailer.py  test_post_repository.py  test_post_service.py
tests/: fixtures.py  test_database_connection.py  test_mailer.py  test_post_repository.py  test_post_service.py
util/: __init__.py  api_response.py
